@@ -385,6 +385,7 @@ function html_graph_area(&$graph_array, $no_graphs_message = '', $extra_url_args
 	}
 
 	refreshPage     = '<?php print get_current_page();?>?action=preview';
+	refreshFunction = 'refreshGraphs()';
 
 	var graph_start = <?php print get_current_graph_start();?>;
 	var graph_end   = <?php print get_current_graph_end();?>;
@@ -466,6 +467,7 @@ function html_graph_thumbnail_area(&$graph_array, $no_graphs_message = '', $extr
 	}
 
 	refreshPage     = '<?php print get_current_page();?>?action=tree';
+	refreshFunction = 'refreshGraphs()';
 
 	var graph_start = <?php print get_current_graph_start();?>;
 	var graph_end   = <?php print get_current_graph_end();?>;
