@@ -107,6 +107,7 @@ Cacti CHANGELOG
 -feature#5316: Allow for searching in settings/menu
 -feature#5321: cli/push_out_hosts.php is deprecated, redirect to rebuild_poller.cache.php
 -feature#5368: Allow all key searching calls to be delayed by defined amount
+-feature#5378: When reload page in browser with graphs created scroll window always return to top
 -feature#5406: Cacti connection handling should forcibly close connections to work around PDO uncertainty
 -feature#5407: Add last_updated column to the boost table to increase diagnostics in Cacti
 -feature#5416: Display device class before package import
